fix: update CORS config - fix render.yaml placeholder and improve header handling